@@ -1,3 +1,11 @@
+Thu Apr 11 19:42:14 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>
+
+        * ace/Log_Category.h:
+        Fixed ACE_ERROR_RETURN()  control reaches end of non-void function warning.
+
+        * tests/Log_Msg_Test.cpp:
+        Added test for ACE_Log_Category
+
 Thu Apr 11 17:54:55 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>
 
         * ace/ace_for_tao.mpc:
